--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-58/style58.css
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-58/style58.css
@@ -7,9 +7,9 @@ body{
 }
 
 #container {
-    width: 720px;
+    width: 920px;
     margin: 10px auto 0px auto; /*Para deixar a div centralizada*/
-    background: #fff;
+    background: #fff url(imgs/coluna.png) repeat-y left top ;
 }
 
 #marca{
