--- a/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/stylenoticia.css
+++ b/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/stylenoticia.css
@@ -27,13 +27,15 @@ nav{
 */
 
 .title{
+    margin: 5px 0;
+    
     background: #294c71;
     width: 370px;
+    color: white;
 }
 
 #conteudo_principal{
     margin: 0 auto;
-    background: url(imagens/fundo-caixa.png);
     width: 1200px;
     height: auto;
     
@@ -41,9 +43,9 @@ nav{
 
 #entrevistas{
     width: 370px;
-    height: 500px;
+    height: 510px;
     margin-right: 15px;
-   
+    background-color: white;
     float: left;
 }
 
@@ -52,8 +54,10 @@ nav{
     margin: 0px 15px;
     width: 370px;
     height: 500px;
-    
+   
+
 }
+
 
 .img_conteudo{
     width: 350px;
@@ -62,4 +66,23 @@ nav{
 .leia{
     color: red;
 
+}
+
+.news{
+  float: left;
+  margin-right: 15px;
+}
+
+.legenda,.leia{
+    background-color: white;
+}
+
+#lista{
+    list-style: none;
+}
+
+li{
+    font-size: 23px;
+    padding: 12px;
+    
 }
