--- a/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/stylenoticia.css
+++ b/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/stylenoticia.css
@@ -4,6 +4,7 @@ body{
     
 }
 
+
 .clear{
     clear: both;
 }
@@ -45,8 +46,8 @@ nav{
     width: 370px;
     height: 510px;
     margin-right: 15px;
-    background-color: white;
     float: left;
+    background: url(imagens/fundo-caixa.png);
 }
 
 .boxes{
@@ -54,13 +55,14 @@ nav{
     margin: 0px 15px;
     width: 370px;
     height: 500px;
-   
+    background: url(imagens/fundo-caixa.png);
 
 }
 
 
 .img_conteudo{
-    width: 350px;
+    padding-left: 10px;
+    width: 330px;
 }
 
 .leia{
@@ -86,3 +88,33 @@ li{
     padding: 12px;
     
 }
+
+.news_box{
+   
+    background: url(imagens/fundo-caixa.png);
+}
+
+label{
+    display: block;
+}
+
+input{
+    margin: 0 0 10px 0;
+    display: block;
+    height: 30px;
+}
+
+#cadastrar{
+    color: white;
+    background-color: rgba(245, 32, 32, 0.911);
+    border-radius: 5px;
+}
+
+.white{
+    margin: 0 auto;
+    background-color: white;
+    width: 350px;
+    height: 400px;
+}
+
+
