--- a/Linguagens/Udemy/CSS/Projeto_Museu_Nacional/style.css
+++ b/Linguagens/Udemy/CSS/Projeto_Museu_Nacional/style.css
@@ -3,9 +3,20 @@
     margin: 0;
     padding: 0;
 }
+#container{
+    width: 90%;
+    margin: 0 auto;
+}
+
 header{
-    border: red solid 1px;
-    
+    height: 150px;
+    background: url(img/fundo.png);
+    display: flex;
+}
+
+.link_header{
+    flex-direction: ;
+
 }
 
 main{
